--- a/src/app/qr/qr_config.json
+++ b/src/app/qr/qr_config.json
@@ -1,1 +1,1 @@
-{"actionType":"ABOUT_TATTOO_PAGE","paypalRequestAmountUSD":10.0,"redirectUrl":"example.com"}
+{"actionType":"TWITTER_ACCOUNT","paypalRequestAmountUSD":10.0,"redirectUrl":"example.com"}
