Config update for QR Code

--- a/src/app/qr/qr_config.json
+++ b/src/app/qr/qr_config.json
@@ -1,1 +1,1 @@
-{"actionType":"TELEGRAM_ACCOUNT","paypalRequestAmountUSD":10.0,"redirectUrl":"example.com"}
+{"actionType":"VENMO_ACCOUNT","paypalRequestAmountUSD":10.0,"redirectUrl":"example.com"}
