--- a/src/app/qr/qr_config.json
+++ b/src/app/qr/qr_config.json
@@ -1,1 +1,1 @@
-{"actionType":"VENMO_ACCOUNT","paypalRequestAmountUSD":10.0,"redirectUrl":"example.com"}
+{"actionType":"REDIRECTION_URL","paypalRequestAmountUSD":10.0,"redirectUrl":"https://youtu.be/dQw4w9WgXcQ"}
