Config update for QR Code

--- a/src/app/qr/qr_config.json
+++ b/src/app/qr/qr_config.json
@@ -1,1 +1,1 @@
-{"actionType":"ABOUT_TATTOO_PAGE","genericFileName":"test_image.png","paypalRequestAmountUSD":10.0,"redirectUrl":"https://youtu.be/dQw4w9WgXcQ"}
+{"actionType":"WHATSAPP_ACCOUNT","genericFileName":"test_image.png","paypalRequestAmountUSD":10.0,"redirectUrl":"https://youtu.be/dQw4w9WgXcQ"}
