--- a/src/app/qr/qr_config.json
+++ b/src/app/qr/qr_config.json
@@ -1,1 +1,1 @@
-{"actionType":"REDIRECTION_URL","genericFileName":"test_image.png","paypalRequestAmountUSD":10.0,"redirectUrl":"https://youtu.be/dQw4w9WgXcQ"}
+{"actionType":"AR_VIEWER","genericFileName":"test_image.png","paypalRequestAmountUSD":10.0,"redirectUrl":"https://youtu.be/dQw4w9WgXcQ"}
