--- a/src/app/qr/qr_config.json
+++ b/src/app/qr/qr_config.json
@@ -1,1 +1,1 @@
-{"actionType":"REDIRECTION_URL","arModelName":"fox_rigged","genericFileName":"test_image.png","paypalRequestAmountUSD":10.0,"redirectUrl":"meatspin.com"}
+{"actionType":"AR_VIEWER","arModelName":"fox_rigged","genericFileName":"test_image.png","paypalRequestAmountUSD":10.0,"redirectUrl":"meatspin.com"}
