shot in the dark

--- a/src/assets/armodels/fox_rigged/config.json
+++ b/src/assets/armodels/fox_rigged/config.json
@@ -1,1 +1,1 @@
-{"translateX":-10,"translateY":0,"scale":0.03,"animationTimeMs":1000,}
+{"translateX":-10,"translateY":0,"scale":0.03,"animationTimeMs":1000}
