--- a/src/app/qr/qr_config.json
+++ b/src/app/qr/qr_config.json
@@ -1,1 +1,1 @@
-{"actionType":"REDIRECTION_URL","arModelName":"anthro_deer_rigged","genericFileName":"test_image.png","paypalRequestAmountUSD":10.0,"redirectUrl":"https://music.youtube.com/playlist?list\u003dPL3e8sfinIpQQ0gjzRcQFMmB5XB7nQeLnV\u0026feature\u003dshare"}
+{"actionType":"AR_VIEWER","arModelName":"trex","genericFileName":"test_image.png","paypalRequestAmountUSD":10.0,"redirectUrl":"https://music.youtube.com/playlist?list\u003dPL3e8sfinIpQQ0gjzRcQFMmB5XB7nQeLnV\u0026feature\u003dshare"}
