--- a/src/app/qr/qr_config.json
+++ b/src/app/qr/qr_config.json
@@ -1,1 +1,1 @@
-{"actionType":"TELEGRAM_ACCOUNT","arModelName":"trex","genericFileName":"test_image.png","paypalRequestAmountUSD":10.0,"redirectUrl":"meatspin.com","trackerType":"HANDS"}
+{"actionType":"VENMO_ACCOUNT","arModelName":"trex","genericFileName":"test_image.png","paypalRequestAmountUSD":10.0,"redirectUrl":"meatspin.com","trackerType":"HANDS"}
