--- a/src/app/qr/qr_config.json
+++ b/src/app/qr/qr_config.json
@@ -1,1 +1,1 @@
-{"actionType":"TELEGRAM_ACCOUNT","arModelName":"trex","genericFileName":"test_image.png","paypalRequestAmountUSD":10.0,"redirectUrl":"https://t.me/joinchat/ZkvqaD7xsak4Njkx","trackerType":"HANDS"}
+{"actionType":"REDIRECTION_URL","arModelName":"trex","genericFileName":"test_image.png","paypalRequestAmountUSD":10.0,"redirectUrl":"example.com","trackerType":"HANDS"}
