--- a/src/app/qr/qr_config.json
+++ b/src/app/qr/qr_config.json
@@ -1,1 +1,1 @@
-{"actionType":"WHATSAPP_ACCOUNT","arModelName":"trex","genericFileName":"test_image.png","paypalRequestAmountUSD":10.0,"redirectUrl":"example.com","trackerType":"HANDS"}
+{"actionType":"TWITTER_ACCOUNT","arModelName":"trex","genericFileName":"test_image.png","paypalRequestAmountUSD":10.0,"redirectUrl":"example.com","trackerType":"HANDS"}
