--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/sitemap.txt"
+              "src/sitemap.xml"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
@@ -94,7 +94,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/sitemap.txt"
+              "src/sitemap.xml"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
