--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,7 @@
               "src/robots.txt"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "./node_modules/@angular/material/",
               "src/styles.scss"
             ],
             "scripts": []
@@ -99,7 +99,7 @@
               "src/robots.txt",
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "./node_modules/@angular/material/",
               "src/styles.scss"
             ],
             "scripts": []
