--- a/angular.json
+++ b/angular.json
@@ -90,6 +90,12 @@
               "src/styles.scss"
             ]
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "cname": "blakewilliams.org"
+          }
         }
       }
     }
