--- a/angular.json
+++ b/angular.json
@@ -51,7 +51,9 @@
               ],
               "outputHashing": "all",              
               "sourceMap": false,
-              "optimization": true
+              "optimization": true,
+              "namedChunks": false,
+              "aot": true
             },
             "development": {
               "optimization": false,
